2000-08-14 20:08:40  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-send-mail): Only insert courtesy message
	when text/plain.

2000-08-14 19:55:04  Jesper Harder  <jesper_harder@hotmail.com>

	* message.el (message-cancel-news): Copy the From header from the
	original article.

2000-08-14 19:52:01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-async.el (gnus-asynchronous): Removed.

2000-08-14 16:12:11  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mail-source.el (mail-source-fetch-maildir): Use MMDF mail
	format.

2000-08-14 19:12:22  Rod Whitby  <list.ding@rwhitby.net>

	* nnmail.el (nnmail-expiry-target-group): Fixed.

2000-08-14  Rod Whitby <list.ding@rwhitby.net>

	* nnmail.el (nnmail-expiry-target-group): Fix the call to
	gnus-request-accept-article so that body encoding is *not* done.
	Encoding is not done on incoming mail, so why should it be done on
	expired mail?


2000-08-14  Rod Whitby <list.ding@rwhitby.net>

	* nnml.el (nnml-request-expire-articles): Fix the calls to
	nnml-request-article (the filename was being passed instead of the
	article number) and nnmail-expiry-target-group
	(nnml-current-directory is changed by nnml-request-accept-article,
	causing it to be incorrect for the next article to be expired).

2000-08-14  Rod Whitby <list.ding@rwhitby.net>

	* gnus-sum.el (gnus-summary-expire-articles): Fix the handling of
	expiry-target group parameters. 

2000-08-13 18:53:08  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-topic.el (gnus-topic-select-group): Touch the dribble
	buffer.
	(gnus-topic-hide-topic): Take a PERMANENT parameter.
	(gnus-topic-show-topic): Ditto.

	* gnus-dup.el (gnus-dup-suppress-articles): Do auto-expiry.

2000-08-12 21:48:00  John H. Palmieri  <palmieri@math.washington.edu>

	* mail-source.el (mail-source-incoming-file-prefix): New
	variable. 

2000-08-12 20:29:53  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-check-first-time-used): Clean up a bit.
